[project]
name = "7drl-2025"
readme = "README.md"
dynamic = ["version", "description"]
requires-python = ">=3.13"

[tool.mypy] # https://mypy.readthedocs.io/en/stable/config_file.html
files = "."
exclude = ['^build/', '^\.']
explicit_package_bases = true
python_version = "3.13"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.ruff]
line-length = 120

[tool.ruff.lint] # https://docs.astral.sh/ruff/rules/
select = ["ALL"]
ignore = [
    "COM",   # flake8-commas
    "E501",  # line-too-long
    "S101",  # assert
    "T20",   # flake8-print
    "S311",  # suspicious-non-cryptographic-random-usage
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
]

[tool.ruff.lint.pydocstyle]
convention = "google" # Use Google-style docstrings

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ord"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
